# ros2-custom-nav-stack

./: README.md  frames_2026-02-28_01.48.21.gv
install/: local_setup.sh  setup.sh
install/robot_description/lib/robot_description/: frame_id_converter_node  motor_command_node
install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
install/robot_description/share/ament_index/resource_index/parent_prefix_path/: robot_description
install/robot_description/share/robot_description/: package.sh  package.xml
install/robot_description/share/robot_description/config/: gz_bridge.yaml
install/robot_description/share/robot_description/launch/: gazebo.launch.py
install/robot_description/share/robot_description/maps/: depot.yaml
install/robot_description/share/robot_description/rviz/: c.rviz
install/robot_description/share/robot_description/scripts/: astar.cpp  custom_slam.py  map_publisher.py
install/robot_description/share/robot_description/src/description/: robot.urdf
log/: latest_build
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: gazebo.launch.py
src/robot_description/scripts/: a_star_planner.py  gym_gazebo_env.py  particle_filter.py
